--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.14MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: gnailiad.gq, port: 11823, type: trojan, password: eVH5bAf8mx, sni: gnailiad.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-389.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-327.0KB/s(Youtube:不良林), server: scloud58.jafiyun.life, port: 22058, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud58.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-6.09MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
   - {name: 🇳🇱 荷兰-351.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
   - {name: 🇳🇱 荷兰-1.16MB/s(Youtube:不良林), server: 213.183.59.214, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
   - {name: 🇳🇱 荷兰-1.47MB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
@@ -66,17 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
@@ -87,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
@@ -103,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
@@ -128,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
