--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-327.0KB/s(Youtube:不良林), server: scloud58.jafiyun.life, port: 22058, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud58.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-6.09MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇳🇱 荷兰-351.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇳🇱 荷兰-1.16MB/s(Youtube:不良林), server: 213.183.59.214, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇳🇱 荷兰-1.47MB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇳🇱 荷兰-989.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇳🇱 荷兰-666.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.48MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-10.25MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.06MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
