--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.48MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 乌克兰-1.03MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇫🇷 法国-1.04MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-1.27MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-10.25MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.06MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 213.183.59.214, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇳🇱 荷兰-1.85MB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-1.46MB/s(Youtube:不良林), server: 213.183.59.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.214, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇳🇱 荷兰-1.27MB/s(Youtube:不良林), server: 213.183.59.214, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 乌克兰-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 乌克兰-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 乌克兰-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 乌克兰-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 乌克兰-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 乌克兰-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-162.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-187.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.48MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 乌克兰-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
