--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 乌克兰-1.03MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇫🇷 法国-1.04MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-1.27MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.25MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 213.183.59.214, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇳🇱 荷兰-1.85MB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇳🇱 荷兰-1.46MB/s(Youtube:不良林), server: 213.183.59.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.214, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇳🇱 荷兰-1.27MB/s(Youtube:不良林), server: 213.183.59.214, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-4.19MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-254.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇺🇸 美国-731.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.69MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-209.9KB/s(Youtube:不良林), server: 213.183.53.207, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
+  - {name: 🇳🇱 荷兰-203.4KB/s(Youtube:不良林), server: 213.183.59.214, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇸🇬 新加坡-404.6KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.02MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.23MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 乌克兰-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-209.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-404.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 乌克兰-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-209.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-404.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 乌克兰-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-209.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-404.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 乌克兰-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-209.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-404.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 乌克兰-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-209.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-404.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 乌克兰-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-209.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-404.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 乌克兰-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-209.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-404.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
